[package]
name = "metar-fetch"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
maplit = "1.0"
metar = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serialport = "4.0"
tokio = { version = "1", features = ["full"] }
